# framework.base.rpm-installer

./: CMakeLists.txt  project.config  rpm-installer.manifest
backend-lib/: CMakeLists.txt
backend-lib/inc/: librpminternals.h
backend-lib/src/: librpm.c  librpminternals.c
backend/inc/: coretpk-installer.h  rpm-installer.h
backend/scripts/: coretpk_ro_xml_converter.sh.in  coretpk_rw_xml_converter.sh.in  install_rpm_package.sh.in  post_script_rpm.sh.in
backend/src/core/: rpm-installer-core.c  rpm-installer-tool.c
backend/src/coretpk/: coretpk-dbus.c  coretpk-installer.c
backend/src/coretpk/inc/: coretpk-installer-internal.h  coretpk-installer-type.h
backend/src/coretpk/xml-parser/: coretpk-parser-hybrid.c  coretpk-parser.c
backend/src/inc/: rpm-installer-type.h
backend/src/rpm/: rpm-installer-core.c  rpm-installer-privilege.c  rpm-installer-signature.c  rpm-installer-tool.c  rpm-installer.c
backend/src/rpm/inc/: rpm-installer-privilege.h  rpm-installer-type.h
backend/src/vconf/: rpm-vconf-intf.c
common/: installer-util.c  rpm-installer-util.c
debian/: rpm-installer.install.in  rules
frontend/: CMakeLists.txt  coretpk-installer-config.ini  rpm-installer-config.ini
frontend/inc/: rpm-frontend.h
frontend/src/: rpm-appcore-intf.c  rpm-cmdline.c
frontend/ui/src/: rpm-homeview.c
inc/: installer-type.h  installer-util.h  rpm-installer-util.h
packaging/: rpm-installer.spec
