#
# Copyright (c) 2008 ~ 2010 Samsung Electronics Co., Ltd.
# All rights reserved
#

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)

PROJECT(rpm-installer C)

IF(_APPFW_FEATURE_EXPANSION_PKG_INSTALL)
        ADD_DEFINITIONS("-D_APPFW_FEATURE_EXPANSION_PKG_INSTALL")
ENDIF(_APPFW_FEATURE_EXPANSION_PKG_INSTALL)


SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR "\${prefix}/lib")
SET(INCLUDEDIR "\${prefix}/include")
SET(VERSION 1.0)

set(CMAKE_SKIP_BUILD_RPATH true)

IF(_APPFW_FEATURE_DELTA_UPDATE)
        ADD_DEFINITIONS("-D_APPFW_FEATURE_DELTA_UPDATE")
ENDIF(_APPFW_FEATURE_DELTA_UPDATE)

IF(_APPFW_FEATURE_MOUNT_INSTALL)
        ADD_DEFINITIONS("-D_APPFW_FEATURE_MOUNT_INSTALL")
ENDIF(_APPFW_FEATURE_MOUNT_INSTALL)

IF(_APPFW_FEATURE_SYSMAN_MMC)
        ADD_DEFINITIONS("-D_APPFW_FEATURE_SYSMAN_MMC")
ENDIF(_APPFW_FEATURE_SYSMAN_MMC)

IF(_APPFW_FEATURE_SUPPORT_DEBUGMODE_FOR_SDK)
        ADD_DEFINITIONS("-D_APPFW_FEATURE_SUPPORT_DEBUGMODE_FOR_SDK")
ENDIF(_APPFW_FEATURE_SUPPORT_DEBUGMODE_FOR_SDK)

IF(_APPFW_FEATURE_SUPPORT_ONLYCAP)
        ADD_DEFINITIONS("-D_APPFW_FEATURE_SUPPORT_ONLYCAP")
ENDIF(_APPFW_FEATURE_SUPPORT_ONLYCAP)

IF(_APPFW_FEATURE_PKGNAME_RESTRICTION)
        ADD_DEFINITIONS("-D_APPFW_FEATURE_PKGNAME_RESTRICTION")
ENDIF(_APPFW_FEATURE_PKGNAME_RESTRICTION)

IF(_APPFW_FEATURE_DIRECTORY_PERMISSION_OPT_ONLY)
	ADD_DEFINITIONS("-D_APPFW_FEATURE_DIRECTORY_PERMISSION_OPT_ONLY")
ENDIF(_APPFW_FEATURE_DIRECTORY_PERMISSION_OPT_ONLY)

IF(TIZEN_FULL_VERSION)
        ADD_DEFINITIONS("-DTIZEN_FULL_VERSION=\"${TIZEN_FULL_VERSION}\"")
ELSE(TIZEN_FULL_VERSION)
        message(FATAL_ERROR "TIZEN_VERSION MUST BE declared on build flag.")
ENDIF(TIZEN_FULL_VERSION)

##################
## build comm libraries
add_subdirectory(frontend)
add_subdirectory(backend-lib)
##################
